assets/css/wrap-item.css
.geek-font {
    font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace !important;
}

.c-code {
    color: #63686F !important;
}

.space {
    margin-top: 9%;
    margin-bottom: 5%;
}

.space-card-col {
    padding-top: 2%;
    padding-bottom: 2%;
}

.space-card {
    margin-top: 1%;
    margin-bottom: 1%;
}

.cyan {
    color: #67b7ff !important;
}

.cyan-light {
    color: #8bc8ff !important;
}

.green {
    color: #6FC37D !important;
}

.red {
    color: #E0645F !important;
}

.red-hard {
    color: #e72c26 !important;
}

.white {
    color: white !important;
}

.comment {
    color: #727272 !important;
}

.yellow {
    color: #ffcb00 !important;
}

.motz {
    margin-left: 20px !important;
    font-style: italic;
    font-weight: bold;
}

.center-col {
    margin-left: 10%;
    margin-right: 10%;
}

.shadow {
    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
}

.space-expand {
    right: 1%;
    margin-left: 1%;
}

.header-wrap {
    display: flex !important;
    justify-content: space-between !important;
    border-radius: 10px 10px 0px 0px;
}

.header-wrap p {
    margin-top: 1%;
    margin-bottom: 1%;
}

.footer-wrap {
    border-radius: 0px 0px 10px 10px;
}

.footer-wrap p {
    margin-top: 1%;
    margin-bottom: 1%;
}

.column-wrap {
    margin-top: 2% !important;
    margin-bottom: 2% !important;
}

.hide-filter {
    background-color: rgb(45, 70, 195);
    position: relative;
    margin-left: -15px;
    padding-left: 15px;
    padding-right: 15px;
    border-radius: 10px 10px 10px 0px;
    margin-right: 15px;
    padding-top: 1%;
    padding-bottom: 1%;
}

.hide-filter:hover {
    background-color: rgb(82, 106, 224);
}

.hide-filter::after {
    position: relative !important;
    margin-bottom: -16px !important;
}

.hide-filter a {
    color: white !important;
    text-decoration: none;
}

.filters-space {
    margin-top: 1% !important;
}

.section {
    text-align: center;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.code {
    font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace !important;
    font-size: 12px !important;
    color: #63686F !important;
}

.background-code {
    background-color: #363e4a !important;
}

.background-code h5 {
    color: rgb(172, 172, 178);
}

.filter-center {
    text-align: left !important;
}

ul li {
    list-style-type: none;
}

a:hover {
    text-decoration: none;
}

.item {
    display: flex;
    justify-content: space-between;
}

.item-checkbox {
    margin-right: 15px;
    margin-top: 2px;
}

.slider {
    display: flex;
    flex-direction: column;
}

.slider input {
    margin-right: 16px;
}

.background-code-font {
    background-color: #4e5867 !important;
}

.space-code-font {
    padding-top: 1%;
    padding-bottom: 1%;
}

.bold {
    font-weight: bold;
}

.space-rubric {
    margin-top: 3% !important;
}

.ul-space {
    padding-top: 10px;
    padding-bottom: 10px;
}

.search {
    margin-top: 6% !important;
    display: flex;
    flex-direction: column;
}

.italic {
    font-style: italic;
}

.img-card {
    overflow: hidden;
    display: flex;
    justify-content: center;
}

.img-card img {
    background-size: 300px;
    width: 317px;
    height: 100%;
}

.shadow-separator {
    box-shadow: rgba(0, 10, 15, 0.36) 0px 2px 4px 0px, rgb(0, 0, 0) 0px 2px 16px 0px;
}

.separator {
    padding-top: 3px;
    border-radius: 1rem;
}

.icon {
    position: relative;
    top: -8px;
    left: 15px;
}

a .icon-:hover {
    color: #568ab8 !important;
}

.like {
    position: relative !important;
    font-size: 11px !important;
    bottom: -2px !important;
}

.cc-code {
    font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace !important;
    font-size: 12px !important;
    color: #838992 !important;
}

.pagination {
    margin-top: 1%;
    display: flex;
    justify-content: center;
}

.header-card {
    display: flex !important;
    justify-content: end !important;
    margin-left: -15px;
    padding-left: 15px;
    padding-right: 15px;
    margin-right: 15px;
    padding-top: 1%;
    padding-bottom: 1%;
}
.background-white{
    background-color: white !important;
}

